Update api documentation
